--- a/kubernetes/backend/karsajobs-deployment.yaml
+++ b/kubernetes/backend/karsajobs-deployment.yaml
@@ -24,7 +24,7 @@ spec:
           - name: APP_PORT
             value: "8080"
           - name: MONGO_HOST
-            value: $(DB_MONGO_SERVICE_HOST)
+            value: mongodb
           - name: MONGO_USER
             valueFrom:
               secretKeyRef:
