fix kirim submission

--- a/kubernetes/backend/karsajobs-service.yaml
+++ b/kubernetes/backend/karsajobs-service.yaml
@@ -10,6 +10,6 @@ spec:
   - port: 8080
     targetPort: 8080
     protocol: TCP
-    nodePort: 30007
+    nodePort: 30007 # ini agar port service nya tetap
   selector:
     app: backend
