--- a/kubernetes/frontend/karsajobs-ui-deployment.yaml
+++ b/kubernetes/frontend/karsajobs-ui-deployment.yaml
@@ -16,10 +16,10 @@ spec:
     spec:
       containers:
       - name: karsajobs-ui
-        image: samsularipin77/karsajobs-ui:v3
+        image: samsularipin77/karsajobs-ui:latest
         imagePullPolicy: Always
         ports:
           - containerPort: 8000
         env:
           - name: VUE_APP_BACKEND
-            value: http://192.168.49.2:30007
+            value: http://192.168.49.2:30007 # isi dengan value dari minikube service karsajobs-service --url
