--- a/kubernetes/mongodb/mongo-secret.yaml
+++ b/kubernetes/mongodb/mongo-secret.yaml
@@ -3,6 +3,6 @@ kind: Secret
 metadata:
   name: mongo-credentials
 type: Opaque
-data:
-  MONGO_ROOT_USERNAME: YWRtaW4=
+data: 
+  MONGO_ROOT_USERNAME: YWRtaW4= #value disi hraus base64 nanti nya akan di decrypt
   MONGO_ROOT_PASSWORD: c3VwZXJzZWNyZXRwYXNzd29yZA==
