--- a/kubernetes/mongodb/mongo-service.yaml
+++ b/kubernetes/mongodb/mongo-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongodb
+  name: mongodb # ini akan dijadikan nama host yang dipangil di kersajobs-deployment.yaml
   labels:
     app: mongodb
 spec:
   ports:
-    - port: 27017
+    - port: 27017 # port default mongodb
   selector:
     app: mongodb
   clusterIP: None
